# svavto-telegram-bot

./: .gitignore  README.md  config.example.toml  logging_config.example.json  main.py  pyproject.toml
src/: config.py  logger.py  main.py
src/callback_data/: __init__.py  car_washes.py  cars.py  mailing.py  penalties.py  performers.py  prefixes.py  shifts.py  staff.py  supervision.py  surcharges.py
src/connections/: __init__.py  available_dates.py  base.py  car_washes.py  cars_to_wash.py  dry_cleaning_requests.py  economics.py  mailing.py  performers.py  shifts.py  staff.py
src/dependencies/: connections.py  http_clients.py  repositories.py  services.py
src/enums/: __init__.py  car_classes.py  car_wash_update_actions.py  dry_cleaning_request_statuses.py  mailing_types.py  penalty_consequences.py  penalty_reasons.py  server_api_error_codes.py  shift_types.py  shift_work_types.py  staff_order_by.py  staff_types.py  staff_update_actions.py  wash_types.py  windshield_washer_types.py
src/exceptions/: __init__.py  car_washes.py  performers.py  server_api.py  shifts.py  staff.py  surcharges.py  validators.py
src/filters/: admins.py
src/handlers/: __init__.py  dry_cleaning.py  errors.py  penalties.py  reports.py  surcharges.py
src/interactors/: __init__.py  car_washes_read.py  chat_username_read.py  extra_shift_create.py  shift_for_today_read.py  shifts_for_today_read.py  shifts_of_for_period_read.py  shifts_of_month_read.py
src/middlewares/: __init__.py  admins.py  banned_staff.py  photos_storage.py
src/models/: __init__.py  available_dates.py  buttons.py  (+10 more)
(+170 files in other folders)
