[tool.poetry]
name = "project-beans-telegram-bot"
version = "0.1.0"
description = ""
authors = ["Eldos <eldos.baktybekov@gmail.com>"]
readme = "README.md"
packages = [{include = "project_beans_telegram_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.13.1"
httpx = "^0.27.2"
fast-depends = "^2.4.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
