[project]
name = "project-beans-telegram-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.18.0",
    "fast-depends>=2.4.12",
    "httpx>=0.28.1",
    "pendulum>=3.0.0",
    "python-json-logger>=3.3.0",
    "redis>=5.2.1",
    "sentry-sdk>=2.22.0",
]
